# mcp-server-demo

./: .gitignore  README.md  main.py  pyproject.toml
